<resources>
    <string name="app_name">Study Manager</string>
    <string name="sm">SM</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="reg_email">Registered email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="new_pwd">New password</string>
    <string name="not_a_member">Not on Study Tracker?</string>
    <string name="signup_here">Signup here</string>
    <string name="enter_email">Enter your email ID</string>
    <string name="enter_passpword">Enter password</string>
    <string name="already_member">Already on Study Tracker?</string>
    <string name="login_here">Login here</string>
    <string name="email_error">Email cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="valid_password">Should be atleast 8 characters long</string>
    <string name="login_failed">Email &amp; Password dont match</string>
    <string name="email_exist">Email already exists</string>
    <string name="error_msg">Couldn\'t connect to service.</string>
    <string name="request_error">Error while requesting, please try again.</string>
    <string name="ok">ok</string>
    <string name="verification">Verification mail has been sent to your mail.
        Please confirm before login.
    </string>
    <string name="home">Home</string>
    <string name="courses">Courses</string>
    <string name="profile">Profile</string>
    <string name="course">COURSE</string>
    <string name="browse_courses">BROWSE COURSES</string>
    <string name="subscribed_courses">SUBSCRIBED COURSES</string>
    <string name="signup_failed">Sign-up failed</string>
    <string name="title_activity_bottom_bar">BottomBarActivity</string>
    <string name="welcome">Welcome</string>
    <string name="subscribed_empty">
        StudyManager is now successfully installed.
    </string>
    <string name="available_courses">AVAILABLE COURSES</string>
    <string name="custom_course">Add Custom Course</string>
    <string name="description">DESCRIPTION</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="subscribed">Successfully subscribed to course.</string>
    <string name="unsubscribed">Unsubscribed from course.</string>
    <string name="update">UPDATE</string>
    <string name="more">MORE</string>
    <string name="recommended">RECOMMENDED BOOKS</string>
    <string name="title">TITLE</string>
    <string name="start_date">START DATE</string>
    <string name="target_date">TARGET DATE</string>
    <string name="setting_saved">Successfully saved settings</string>
    <string name="change">Change</string>
    <string name="save">save</string>
    <string name="save_vertical">s\na\nv\ne</string>
    <string name="course_start">Course set to start on </string>
    <string name="set_target_date">Set Target Date</string>
    <string name="set_reading_speed">Set Reading Speed</string>
    <string name="course_settings">Course-Settings details</string>
    <string name="reading_speed_on">Course settings has been caliberated based on your reading speed.</string>
    <string name="reading_speed_off">Course settings has been caliberated based on a Target-Date.\n
        Changing the settings to a reading speed will clear all of your previous settings.</string>
    <string name="target_date_on">Course settings has been caliberated based on a Target-Date.</string>
    <string name="target_date_off">Course settings has been caliberated based on your reading speed.\n
        Changing the settings to a target date will clear all of your previous settings.</string>
    <string name="input_hours">INPUT HOURS</string>
    <string name="input_hours_text">Enter the number of hours you can spend studying on a regular
        basis for this course.
    </string>
    <string name="prep_time">PROFICIENCY LEVEL</string>
    <string name="beginner">Beginner</string>
    <string name="normal">Normal</string>
    <string name="expert">Expert</string>
    <string name="hoursperday_pre">Read</string>
    <string name="hoursperday_post">pages per day to stay on track</string>
    <string name="plan_date">PLANNED COMPLETION DATE</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="max_hours">*Maximum of 12 study hours per day</string>
    <string name="input_hours_error">At least one of the input hours should be non zero.</string>
    <string name="books">Books</string>
    <string name="add_book">ADD BOOK</string>
    <string name="pages_com">Pages Completed</string>
    <string name="pages_completed">Pages Completed :</string>
    <string name="update_progress">UPDATE PROGRESS</string>
    <string name="cant_delete">Cannot delete last book in course</string>
    <string name="page_no_read">No of Pages Read</string>
    <string name="total_pages">Total Pages</string>
    <string name="rev_completed">Revision Completed</string>
    <string name="completed">Completed</string>
    <string name="book_title">Book Title</string>
    <string name="no_pages">Number of pages</string>
    <string name="author">Author</string>
    <string name="course_title">Course Name</string>
    <string name="descript">Description</string>
    <string name="prof_info">PROFILE INFORMATION</string>
    <string name="name">Name</string>
    <string name="logout">LOGOUT</string>
    <string name="copyright">COPYRIGHT &amp; DISCLAIMER NOTICE</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comma">,</string>
    <string name="tou">
        PMI, PMP and PMBOK are trademarks of the Project Management Institute, Inc.\n
        Rita Mulachy Exam Prep are trademarks of RMI Learning Solution\n
        RMI &amp; PMI has not endorsed and did not participate in the development of this Application.
        RMI and PMI does not sponsor this publication and makes no warranty,
        guarantee or representation, expressed or implied as to the accuracy of the Application.
        Every attempt has been made by BeckSoftware Ltd.,
        to ensure that the information presented in this Application is accurate and can serve as preparation for the PMP certification exam.
        However, BeckSofware Ltd., accepts no legal responsibility for the content of the recommended books.
        This Application should be used only as a tool to assist in preparation of the subscribed Courses.
        Following the “Plan” from this document does not guarantee that the reader will pass the PMP Certification exam.
        No such guarantees or warranties are implied or expressed by BeckSoftware Ltd.
    </string>
    <string name="more_info"><a href="https://www.pmi.org/certifications/types/project-management-pmp">Get more info</a></string>
    <string name="title_activity_course_details">Course Details</string>
    <string name="title_activity_course_settings">Course Settings</string>
    <string name="title_activity_course_update">Course Update</string>
    <string name="title_activity_pwd_recovery">Reset Password</string>
    <string name="title_activity_custom_book">Add Custom Book</string>
    <string name="title_activity_custom_course">Custom Course</string>

</resources>
