<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_custom_course"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.studymanager.customcourse.CustomCourseActivity"
    tools:ignore="MissingPrefix"
    tools:showIn="@layout/activity_custom_course">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            fontPath="fonts/Asap-Bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/course"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_small" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_title"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descript"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            fontPath="fonts/Asap-Bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/start_date"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cal" />

            <TextView
                android:id="@+id/start_tv"
                fontPath="fonts/Asap-Regular.ttf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:lineSpacingExtra="3dp"
                android:textColor="@color/default_tv_color"
                android:textSize="@dimen/text_xsmall" />

            <Button
                android:id="@+id/change_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="changeDate"
                android:text="@string/change"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_xsmall" />

        </LinearLayout>

        <TextView
            fontPath="fonts/Asap-Bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_book"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_small" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/title_book_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_title"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/pages_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_pages"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/book_btn"
            style="?android:attr/borderlessButtonStyle"
            fontPath="fonts/Asap-Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="createCourse"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_xsmall" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
