<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myScrollingContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_vertical"
    android:paddingBottom="10dp"
    android:scrollbars="none"
    tools:context="com.app.studymanager.coursesettings.fragment.targetdate.TargetDateFragment"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            fontPath="fonts/Asap-Bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/title_tv"
            fontPath="fonts/Asap-Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="3dp"
            android:textColor="@color/default_tv_color"
            android:textSize="@dimen/text_xsmall" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light" />

        <TextView
            fontPath="fonts/Asap-Bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/target_date"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cal" />

            <TextView
                android:id="@+id/target_tv"
                fontPath="fonts/Asap-Regular.ttf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:lineSpacingExtra="3dp"
                android:textColor="@color/default_tv_color"
                android:textSize="@dimen/text_xsmall" />

            <Button
                android:id="@+id/change_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="changeDate"
                android:text="@string/change"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_xsmall" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light" />

        <TextView
            fontPath="fonts/Asap-Bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/description_tv"
            fontPath="fonts/Asap-Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:lineSpacingExtra="3dp"
            android:textColor="@color/default_tv_color"
            android:textSize="@dimen/text_xsmall" />


        <Button
            android:id="@+id/save_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:onClick="saveSettings"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_xsmall" />

    </LinearLayout>

</ScrollView>
