<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_pwd_recovery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.studymanager.pwdrecovery.PwdRecoveryActivity"
    tools:ignore="MissingPrefix"
    tools:showIn="@layout/activity_pwd_recovery">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/mail_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_email"
                android:focusable="false"
                android:inputType="" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/pwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_pwd"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <Button
            style="?android:attr/borderlessButtonStyle"
            fontPath="fonts/Asap-Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="resetPassword"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_xsmall" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
